test/arrays/errors/nilStorageNonNilAssocArr.1.good
nilStorageNonNilAssocArr.chpl:17: In function 'main':
nilStorageNonNilAssocArr.chpl:19: error: Cannot initialize associative array because element type shared C is a non-nilable class
